k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ofertonazos
  labels:
    app: ofertonazos
spec:
  type: ClusterIP
  selector:
    app: ofertonazos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
